--- a/style.css
+++ b/style.css
@@ -35,6 +35,8 @@ form {
     padding: 10px 10px 5px 10px;
     transition: background 0.2s linear;
     color: #1f1f1f;
+    display: inline-block;
+    width: 50%;
 }
 
 button {
@@ -66,6 +68,24 @@ input {
 #remember {
     width: auto;
     margin-bottom: 5px;
+}
+
+#login-error-msg-holder {
+    /*background-color: lightcoral;*/
+    /*border-radius: 6px;*/
+    /*padding: 0 20px 0 20px;*/
+    /*transition: background 0.2s linear;*/
+    /*color: #1f1f1f;*/
+    display: none;
+}
+
+#login-error-msg-holder.showing {
+    background-color: lightcoral;
+    border-radius: 6px;
+    padding: 0 20px 0 20px;
+    transition: background 0.2s linear;
+    color: #1f1f1f;
+    display: inline-block;
 }
 
 /*#login {*/
