--- a/client/style.css
+++ b/client/style.css
@@ -11,28 +11,49 @@
 body {
     background-color: #292929;
     color: #f0f0f0;
-    /*font-family: 'Helvetica Neue', Arial, sans-serif;*/
-    padding: 20px;
+    /*padding: 20px;*/
     transition: background 0.2s linear;
+    width: 100%;
+    margin: 0;
 }
 
-main {
+nav {
     background-color: #1f1f1f;
-    box-shadow: 3px 3px 12px black;
-    border-radius: 6px;
-    max-width: 90vw;
+    box-shadow: -3px 0 12px black;
+    /*border-radius: 6px;*/
+    width: 100%;
     max-height: 85vh;
+    padding: 20px 20px 20px 20px;
+    margin-bottom: 50px;
+    overflow: auto;
+    transition: background 0.2s linear;
+    text-align: center;
+}
+
+main.login {
+    background-color: #1f1f1f;
+    border: solid #121212;
+    box-shadow: 0 0 15px black;
+    border-radius: 6px;
     padding: 20px 20px 20px 20px;
     margin: auto auto 20px;
     overflow: auto;
     transition: background 0.2s linear;
     text-align: center;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 50%;
 }
 
 form {
     background-color: lightsteelblue;
     border-radius: 6px;
     margin-top: 20px;
+    margin-bottom: 20px;
     padding: 10px 10px 5px 10px;
     transition: background 0.2s linear;
     color: #1f1f1f;
