ooh boy a lot of changes.

--- a/client/style.css
+++ b/client/style.css
@@ -215,3 +215,8 @@ li:nth-child(even) {
     transition: background 0.2s linear;
 }
 
+pre {
+    overflow: scroll;
+    overflow-wrap: break-word;
+}
+
